--- a/src/image/README
+++ b/src/image/README
@@ -1,5 +1,5 @@
-Place zipped Rasbian image here.
+Place zipped Raspberry Pi OS image here.
 
 If not otherwise specified, the build script will always use the most
-recent zip file matching the file name pattern "*-raspbian.zip" located
+recent zip file matching the file name pattern "raspios_*.zip" located
 here.
