Docs: add update details

--- a/site/blog/2021-11-14-ratos-v1-0-released.mdx
+++ b/site/blog/2021-11-14-ratos-v1-0-released.mdx
@@ -35,7 +35,11 @@ RatOS now ships with the gcode_shell_command.py klipper extension, this allows f
 
 ### More flexible macros
 
-We've added a bunch of parameters you can configure for changing the behavior of the built-in RatOS macro's, what your START_PRINT to skip the bed mesh calibration? No problem. Want the carriage to park in the front during pauses? Easy! How about starting your print with a primeline? You've got it! Read more in the [Update Guide](/changelog#updating-from-v-coreos-rc2)
+We've added a bunch of parameters you can configure for changing the behavior of the built-in RatOS macro's, what your START_PRINT to skip the bed mesh calibration? No problem. Want the carriage to park in the front during pauses? Easy! How about starting your print with a primeline? You've got it! Read more in the [Macro Configuration documentation](/docs/configuration/macros)
+
+### Updating from V-CoreOS RC 2
+
+If you're using V-CoreOS RC 2, take a look at the [Update Guide](/changelog#updating-from-v-coreos-rc2) for a smooth transition.
 
 ### THANK YOU for your support
 
