Docs: fix typo and bad link

--- a/site/blog/2021-11-14-ratos-v1-0-released.mdx
+++ b/site/blog/2021-11-14-ratos-v1-0-released.mdx
@@ -7,6 +7,8 @@ tags: [RatOS, Releases]
 
 ## RatOS V1.0 is here!
 
+![RatOS](/img/logos/Logo-white.svg)
+
 RatOS V1.0 is finally released, it's been a long road to get here, thank you everyone who has been testing and supporting me get this release completed.
 There's a lot of new exciting features that i'm dying to share with you all.
 
@@ -35,7 +37,7 @@ RatOS now ships with the gcode_shell_command.py klipper extension, this allows f
 
 ### More flexible macros
 
-We've added a bunch of parameters you can configure for changing the behavior of the built-in RatOS macro's, what your START_PRINT to skip the bed mesh calibration? No problem. Want the carriage to park in the front during pauses? Easy! How about starting your print with a primeline? You've got it! Read more in the [Macro Configuration documentation](/docs/configuration/macros)
+We've added a bunch of parameters you can configure for changing the behavior of the built-in RatOS macro's, want your START_PRINT to skip the bed mesh calibration? No problem. Want the carriage to park in the front during pauses? Easy! How about starting your print with a primeline? You've got it! Read more in the [Macro Configuration documentation](/docs/configuration/macros)
 
 ### Updating from V-CoreOS RC 2
 
