--- a/site/docs/introduction.mdx
+++ b/site/docs/introduction.mdx
@@ -21,7 +21,7 @@ Like MainsailOS and FluiddPi, RatOS is just an image for your Raspberry Pi consi
 
 To run RatOS on your printer you need a supported control board and a Raspberry Pi.
 
-<Link to="installation" className="button button--primary">
+<Link to="/docs/installation" className="button button--primary">
   Ready? Get started!
 </Link>
 
