Docs: add sponsor information

--- a/site/blog/2021-11-14-ratos-v1-0-released.mdx
+++ b/site/blog/2021-11-14-ratos-v1-0-released.mdx
@@ -48,4 +48,4 @@ If you're using V-CoreOS RC 2, take a look at the [Update Guide](/changelog#upda
 The amount of support and encouragement i've recieved from the community has been heartwarming, and totally makes the long nights worth it!
 Thank you for helping and thank you for using RatOS!
 
-If you wish to donate towards a new spool of filament or a cup of coffee you can do so here: [paypal.me/miklschmidt](https://paypal.me/miklschmidt). Thank you very much!
+If you wish to donate towards a new spool of filament or a cup of coffee you can do so here: [github.com/sponsors/miklschmidt](https://github.com/sponsors/miklschmidt) or [paypal.me/miklschmidt](https://paypal.me/miklschmidt). Thank you very much!
