--- a/site/docs/introduction.mdx
+++ b/site/docs/introduction.mdx
@@ -13,7 +13,7 @@ RatOS is a preconfigured Raspberry Pi image that aims to make it as painless as 
 ## How does it work?
 
 A typical klipper setup consists of three parts, there's Klipper itself, which does all the stuff Marlin or RRF would do - read gcode and control your printer.
-Then there's the API, Moonraker which exposes printer status and methods for other programs to talk to Klipper. Lastly there's the user interface, sort of like octoprint / duet web control / octodash / octoscreen, there are currently three options for that: Mainsail, Fluidd and Klipperscreen.
+Then there's the API, Moonraker which exposes printer status and methods for other programs to talk to Klipper. Lastly there's the user interface, sort of like octoprint / duet web control / octodash / octoscreen, there are currently three popular options for that: Mainsail, Fluidd and Klipperscreen.
 
 Like MainsailOS and FluiddPi, RatOS is just an image for your Raspberry Pi consisting of a combination of these parts and some initial setup. RatOS goes a step further than the others and provides a complete managed modular configuration supporting several printers, extruders, hotends, boards, probes, sensors, macros, etc and some extra neat features such as automatic firmware updates, easy input shaper graph generation and so on. RatOS's main design principle is that the user shouldn't be required to interact with the commandline to use Klipper on their 3D Printer.
 
