--- a/site/docs/boards/btt/skr-2-429.md
+++ b/site/docs/boards/btt/skr-2-429.md
@@ -4,4 +4,41 @@ sidebar_label: SKR 2 429
 
 # BIGTREETECH SKR 2 w/ STM32F429
 
-Documentation is currently a work in progress, please check back later.
+:::caution Only Partial support
+This board currently cannot be flashed automatically through USB, that means all firmware updates have to be done by physically moving an sd card from and to the board for now. RatOS compiles the firmware binary for you each time klipper is updated (while the SKR 2 is connected), you can find the most recent firmware in the Mainsail Machine page under the `firmware_binaries` folder). Automatic flashing may be possible in the future if SDIO support is implemented in klipper. See this thread: https://github.com/Klipper3d/klipper/pull/4881#issuecomment-962596510 for more info.
+:::
+
+## Wiring
+
+![BTT Octopus Pro STM32F429 Wiring Diagram](_media/skr-2-429-wiring.svg)
+[Open Full Size Image](_media/skr-2-429-wiring-full.svg)
+
+:::danger if you use the Ratrig endstop switches and cables, do **not** blindly plug them in to your Octopus as doing this will short the board's 5V power rail.
+You will probably have to swap the outer two wires (red and white) on the board end of the cable but double check to make sure your cables match the wiring diagram.
+:::
+
+## Firmware installation
+
+:::caution Use a proper cable
+Make sure your board is connected to the Pi **via the provided USB cable** (USB-B on the SKR 2 429, USB-A on the Pi).
+:::
+
+Move the `firmware-btt-skr-2-429.bin` file from the release page (or from the `firmware_binaries` folder on Mainsail's Machine page) to the SD card that goes into your control board and rename it to `firmware.bin`, then insert the SD card in to the control board and power it on.
+
+:::tip
+You can verify if the board flashed correctly by checking if the firmware.bin file has been changed to firmware.CUR on the SD card. If you have trouble flashing the motherboard, start unplugging your wires beginning with the endstops, sometimes faulty wiring can cause the board to not boot properly.
+:::
+
+If you're going through initial setup please continue in the [installation guide](installation.md#setup)
+
+## Manual firmware upgrade
+
+Sometimes klipper makes changes to the microcontroller code and thus your MCU need to be reflashed with new firmware. If you see an error like this:
+
+![Firmware version mismatch between host and guest](/img/firmware_version_mismatch.png)
+
+And the host version number is larger than the mcu version number, you need to flash your control board. If the host version is lower than the MCU number, you need to update klipper on your pi. RatOS compiles the firmware binary for you each time klipper is updated (while the SKR 2 is connected), you can find the most recent firmware in the Mainsail Machine page under the `firmware_binaries` folder)
+
+:::info
+RatOS automatically compiles new firmware for your board when klipper is updated and places it in the firmware_binaries folder, you can download the binary from here and flash via SD card manually. Follow the process described above.
+:::
