Blog: add image to release post

--- a/site/blog/2022-01-08-ratos-v1-1-released.mdx
+++ b/site/blog/2022-01-08-ratos-v1-1-released.mdx
@@ -7,6 +7,8 @@ tags: [RatOS, Releases]
 
 ## RatOS V1.1 is now released!
 
+![RatOS](/img/logos/Type.png)
+
 As some of you may have noticed, RatOS v1.1 has been released this week, bringing new templates, new modular driver and stepper definitions and
 support for new extruders and hotends. This release also contains an updated V-Minion template that will run out of the box with the just released [V-Minion full kits](https://www.ratrig.com/v-minion.html) that will start shipping soon.
 
