--- a/site/docs/boards/btt/skr-2-429.md
+++ b/site/docs/boards/btt/skr-2-429.md
@@ -17,6 +17,10 @@ This board currently cannot be flashed automatically through USB, that means all
 You will probably have to swap the outer two wires (red and white) on the board end of the cable but double check to make sure your cables match the wiring diagram.
 :::
 
+:::info Jumpers
+A green square with triangles inside is where you would place a jumper, remove all jumpers on the board that are not marked by this symbol.
+:::
+
 ## Firmware installation
 
 :::caution Use a proper cable
