--- a/site/docs/boards/btt/skr-2-429.md
+++ b/site/docs/boards/btt/skr-2-429.md
@@ -13,7 +13,7 @@ This board currently cannot be flashed automatically through USB, that means all
 ![BTT Octopus Pro STM32F429 Wiring Diagram](_media/skr-2-429-wiring.svg)
 [Open Full Size Image](_media/skr-2-429-wiring-full.svg)
 
-:::danger if you use the Ratrig endstop switches and cables, do **not** blindly plug them in to your Octopus as doing this will short the board's 5V power rail.
+:::danger if you use the Ratrig endstop switches and cables, do **not** blindly plug them in to your SKR 2 as doing this will short the board's 5V power rail.
 You will probably have to swap the outer two wires (red and white) on the board end of the cable but double check to make sure your cables match the wiring diagram.
 :::
 
