Docs: add disclaimer

--- a/site/docs/introduction.mdx
+++ b/site/docs/introduction.mdx
@@ -41,6 +41,9 @@ Join the discussion on discord!
 
 RatOS is based on [Klipper](https://www.klipper3d.org/), [Moonraker](https://moonraker.readthedocs.io/en/latest/), [Mainsail](https://docs.mainsail.xyz/), [MainsailOS](https://github.com/raymondh2/MainsailOS) and [KlipperScreen](https://klipperscreen.readthedocs.io/) without these and the amazing people behind them, RatOS would not have been possible.
 
+## Disclaimer
+The software is provided “as is”, without warranty of any kind, express or implied, including but not limited to the warranties of merchantability, fitness for a particular purpose and noninfringement. In no event shall the authors or copyright holders be liable for any claim, damages or other liability, whether in an action of contract, tort or otherwise, arising from, out of or in connection with the software or the use or other dealings in the software.
+
 ## Github links
 
 [RatOS](https://github.com/Rat-OS/RatOS/)
