Docs: Correct typos in 4028 guide

--- a/site/docs/guides/4028.md
+++ b/site/docs/guides/4028.md
@@ -59,6 +59,6 @@ shutdown_value: 0 # turn the fan power off on MCU shutdown.
 That's it! Enjoy using your 4028 for excellent part cooling :)
 
 ## Bonus: What to look for in a 4028 fan?
-CFM isn't everything, we want as much pressure we can get to effectively push the high airflow through our ducts, a good fan is balanced between CFM and pressure. Air pressure is usually expressed in inches of water (in. h2o) or milimeters or pascals, there are online tools to convert between different units, so you can compare the fans before buying, just google "inches of water to pascal" or whatever units you need to convert.
+Airflow (common units: cfm, m3/h) isn't everything, we want as much pressure we can get to effectively push the high airflow through our ducts, a good fan is balanced between airflow and pressure. Air pressure is usually expressed in inches of water (in. h2o) or pascals, there are online tools to convert between different units, so you can compare the fans before buying, just google "inches of water to pascal" or whatever units you need to convert.
 
-A good performaning 4028 fan will have around 25-30 CFM and over 3 inches of water. For example the `Delta FFB0412UHN-SM36` or the `Sanyo 9GAX0412P3S001`. Take a look at the datasheet for the fan and make sure it runs at low PWM levels, you don't always want high output and it's important that the fan you choose supports low speeds as well as high speeds. Generally you want around a maximumum RPM of 20.000-25.000 to keep the rotor light, extremely fast fans such as the twice as powerful `Delta PFB0412EN-E` needs a heavier rotor and is therefore slower to change speeds. Generally the `Sanyo 9GAX0412P3S001` is regarded as the most well rounded 4028 fan currently, but they can be hard to get, so take a look around and see what you can find, there are many options out there.
+A good performing 4028 fan will have around 25-30 CFM and over 3 inches of water. For example the `Delta FFB0412UHN-SM36` or the `Sanyo 9GAX0412P3S001`. Take a look at the datasheet for the fan and make sure it runs at low PWM levels, you don't always want high output and it's important that the fan you choose supports low speeds as well as high speeds. Generally you want around a maximumum RPM of 20.000-25.000 to keep the rotor light, extremely fast fans such as the twice as powerful `Delta PFB0412EN-E` needs a heavier rotor and is therefore slower to change speeds. Generally the `Sanyo 9GAX0412P3S001` is regarded as the most well rounded 4028 fan currently, but they can be hard to get, so take a look around and see what you can find, there are many options out there.
