--- a/site/docs/guides/4028.md
+++ b/site/docs/guides/4028.md
@@ -47,7 +47,7 @@ tachometer_poll_interval: 0.0005 # will support up to a 30.000 RPM fan with 2 pu
 Notice the `^` in front of the pin name, this is a hardware pullup which is generally necessary to read the tachometer signal. For more information on tachometer configuration, refer to the [klipper configuration reference](https://www.klipper3d.org/Config_Reference.html?h=tachometer#fan)
 
 ## My fan runs at 100% until klipper boots
-This is a safety feature of server fans, they will always run at 100% until they get a PWM signal. It's a bit annoying for 3d printer use, but there's a way around that. You can use the negative terminal of a spare heater port to only power the fan when the board is booted, by connecting the black wire (gnd) to the negative terminal of the heater port. Since these fans run high amperages, it's important that we use a pwm port backed by a properly rated mosfet, which is why the heater ports are perfect. Let's say we connect the gnd wire to the second heater of our board which is controlled by the pin `PA9`, the configuration would be the following:
+This is a safety feature of server fans, they will always run at 100% until they get a PWM signal. It's a bit annoying for 3d printer use, but there's a way around that. You can use the negative terminal of a spare heater port to only power the fan when the board is booted, by connecting the black wire (gnd) to the negative terminal of the heater port. Since these fans run high amperages, it's important that we use a pwm port backed by a properly rated mosfet, which is why the heater ports are perfect. Let's say we connect the gnd wire to the second heater of our board which is controlled by the pin `PA9` (again, look up the correct pin in your boards pin diagram), the configuration would be the following:
 
 ```properties
 [output_pin 4028_POWER]
