Docs: add warning about toggling gnd on 4028

--- a/site/docs/guides/4028.md
+++ b/site/docs/guides/4028.md
@@ -45,14 +45,19 @@ The fourth pin is the tachometer pin, this pin is used to read the RPM of the fa
 [fan]
 pin: !fan_part_cooling_pin
 cycle_time: 0.00004 # or 0.01
-tachometer_pin: ^PD14 # look up your boards pinout diagram to get the pin name for the pin you've chosen
+tachometer_pin: ^PD14 # Made up pin name, look up your boards pinout diagram to get the pin name for the pin you've chosen
 tachometer_poll_interval: 0.0005 # will support up to a 30.000 RPM fan with 2 pulses per rotation.
 ```
 
 Notice the `^` in front of the pin name, this is a hardware pullup which is generally necessary to read the tachometer signal. For more information on tachometer configuration, refer to the [klipper configuration reference](https://www.klipper3d.org/Config_Reference.html?h=tachometer#fan)
 
 ## My fan runs at 100% until klipper boots
-This is a safety feature of server fans, they will always run at 100% until they get a PWM signal. It's a bit annoying for 3d printer use, but there's a way around that. You can use the negative terminal of a spare heater port to only power the fan when the board is booted, by connecting the black wire (gnd) to the negative terminal of the heater port. Since these fans run high amperages, it's important that we use a pwm port backed by a properly rated mosfet, which is why the heater ports are perfect. Let's say we connect the gnd wire to the second heater of our board which is controlled by the pin `PA9` (again, look up the correct pin in your boards pin diagram), the configuration would be the following:
+
+:::danger Do not do this if you have the tachometer pin connected. It will potentially fry your board.
+On some fans (verified on Sanyo Denki's) disconnecting the ground pin while 12V is connected to the fan will cause a high voltage on the tachometer pin, this can fry your mcu. Do **NOT** connect the tachometer pin if you do this.
+:::
+
+This is a safety feature of server fans, they will always run at 100% until they get a PWM signal. It's a bit annoying for 3d printer use, but there's a way around that. You can use the negative terminal of a spare heater port to only power the fan when the board is booted, by connecting the black wire (gnd) to the negative terminal of the heater port. Since these fans run high amperages, it's important that we use a pwm port backed by a properly rated mosfet, which is why the heater ports are perfect. Let's say we connect the gnd wire to the second heater of our board which is controlled by the pin `PA9` (made up pin name, look up the correct pin in your boards pin diagram), the configuration would be the following:
 
 ```properties
 [output_pin 4028_POWER]
