Docs: add new enable_pin option to 4028 guide

--- a/site/docs/guides/4028.md
+++ b/site/docs/guides/4028.md
@@ -66,6 +66,15 @@ value: 1
 shutdown_value: 0 # turn the fan power off on MCU shutdown.
 ```
 
+Since Sep 2, 2022 there's now an `enable_pin` in the `[fan]` section that does the same thing, so now you can just do:
+
+```properties
+[fan]
+pin: !fan_part_cooling_pin
+cycle_time: 0.01
+enable_pin: PA9
+```
+
 That's it! Enjoy using your 4028 for excellent part cooling :)
 
 ## Bonus: What to look for in a 4028 fan?
