--- a/site/docs/guides/4028.md
+++ b/site/docs/guides/4028.md
@@ -13,6 +13,10 @@ The black and the red pin are for power, you need to connect these to an always 
 ## PWM
 On Delta fans the blue wire is the PWM wire, on Sanyo's it's the brown wire. If you're unsure, refer to your fans datasheet. To control the 4028's the PWM wire is fed a 5V PWM signal from the board. An easy way to do this is to hook it up to the negative terminal of the part cooling fan port (refer to your boards wiring diagram). We need to invert the logic of the fan_part_cooling_pin to generate a PWM signal the fan can understand. You can do that with the following piece of configuration in your user overrides section.
 
+:::info
+On boards with fan voltage selection (such as the Octopus boards), the voltage doesn't matter. The selector only changes which source the positive pin is connected to. We don't use the positive pin, we use the negative, which is a mosfetted ground connection. 
+:::
+
 ```properties
 [fan]
 pin: !fan_part_cooling_pin
