Docs: guide for always on fans

--- a/site/docs/guides/4028.md
+++ b/site/docs/guides/4028.md
@@ -70,7 +70,7 @@ value: 1
 shutdown_value: 0 # turn the fan power off on MCU shutdown.
 ```
 
-Since Sep 2, 2022 there's now an `enable_pin` in the `[fan]` section that does the same thing, so now you can just do:
+Since Sep 2, 2022 there's now an `enable_pin` in the `[fan]` section that does the same thing and on top of that it turns the fan power off if speed is 0, so now you can just do:
 
 ```properties
 [fan]
@@ -80,6 +80,18 @@ enable_pin: PA9
 ```
 
 That's it! Enjoy using your 4028 for excellent part cooling :)
+
+## My fan doesn't shut off at 0%
+See the instructions for wiring above and use the `enable_pin` like so:
+
+```properties
+[fan]
+pin: !fan_part_cooling_pin
+cycle_time: 0.01
+enable_pin: PA9
+```
+
+That will turn off the fan at 0%.
 
 ## Bonus: What to look for in a 4028 fan?
 Airflow (common units: cfm, m3/h) isn't everything, we want as much pressure we can get to effectively push the high airflow through our ducts, a good fan is balanced between airflow and pressure. Air pressure is usually expressed in inches of water (in. h2o) or pascals, there are online tools to convert between different units, so you can compare the fans before buying, just google "inches of water to pascal" or whatever units you need to convert.
