Blog: add note about bend radius

--- a/site/blog/2022-11-08-no-you-dont-want-to-use-can.mdx
+++ b/site/blog/2022-11-08-no-you-dont-want-to-use-can.mdx
@@ -40,7 +40,7 @@ We have 4 USB ports (and you can add more via hubs) on a standard raspberry pi, 
 
 ### But Mikkel, USB cables are so fragile?
 
-No. Good modern USB cables are made to take years of abuse from teenagers plugging and unplugging their phone, dogs chewing on them, heck some of them can even be used to [pull cars and lift weights](https://www.indiegogo.com/projects/zus-super-duty-charging-cable-lifetime-guarantee/). Durability is really not a concern, and even if your cable breaks, a new one is cheap and takes seconds to swap. Get a good braided USB cable and it will outlast the rest of your wiring.
+No. Good modern USB cables are made to take years of abuse from teenagers plugging and unplugging their phone, dogs chewing on them, heck some of them can even be used to [pull cars and lift weights](https://www.indiegogo.com/projects/zus-super-duty-charging-cable-lifetime-guarantee/). The bend radius that are tested are far tighter than what you'd ever use in a 3d printer. Durability is really not a concern, and even if your cable breaks, a new one is cheap and takes seconds to swap. Get a good braided USB cable and it will outlast the rest of your wiring.
 
 ### But Mikkel, USB cables are super susceptible to noise!
 
