Blog: add note about toolboards

--- a/site/blog/2022-11-08-no-you-dont-want-to-use-can.mdx
+++ b/site/blog/2022-11-08-no-you-dont-want-to-use-can.mdx
@@ -52,7 +52,7 @@ CAN redundancy is wasted on klipper, your raspberry pi is the single point of fa
 
 ### But Mikkel, CAN is so much more reliable!
 
-Is it? Your control board has run on USB for ever. It's been tested and proven to work.
+Is it? Your control board has run on USB for ever. It's been tested and proven to work. It works just as well for toolboards too.
 
 None of the benefits CAN brings are relevant to 3d printing. You're wasting your time trying to get it to work, when you could just plug in a USB cable and be on your way.
 
