--- a/site/docs/boards/btt/skr-2-429.md
+++ b/site/docs/boards/btt/skr-2-429.md
@@ -28,38 +28,12 @@ remove all jumpers on the board that are not marked by this symbol.
 Make sure your board is connected to the Pi **via the provided USB cable** (USB-B on the SKR 2 429, USB-A on the Pi).
 :::
 
-Download the `firmware-btt-skr-2-429.bin` from the `firmware_binaries` folder found on the Machine page of [Mainsail](http://RatOS.local/), copy it onto the SD card that goes into your control board and call it `firmware.bin`, then insert the SD card in to the control board. Here are the steps in chronological order:
+Follow the steps in the RatOS Configurator at [http://RatOS.local/configure?step=1](http://RatOS.local/configure?step=1).
 
-1.  Navigate to [http://RatOS.local/](http://RatOS.local/)
-2.  Open Machine page
-3.  Open `firmware_binaries` folder
-4.  Download `firmware-btt-skr-2-429.bin`
-5.  Format the sd card for your board to FAT16 (sometimes just called FAT), or FAT32 with a clustersize of 8kb or 4kb.
-6.  Copy `firmware-btt-skr-2-429.bin` onto the sd card for your board
-7.  Rename `firmware-btt-skr-2-429.bin` to `firmware.bin`. Please be wary of file extensions! If the file doesn't already show .bin, don't add it!
-8.  Safely eject the SD card through your operating system.
-9.  Physically take out the sd card and insert it into your control board.
-10. Power cycle your printer or control board. Remember to shut the pi down properly before you cut power to your Pi (you can do that through Mainsail using the dropdown menu in the top right corner).
-11. Verify that the firmware has been flashed.
+## I updated klipper and now i get an error!
 
-:::tip
-If you don't know how to make Windows Explorer show file extensions, see [this article on HowToGeek](https://www.howtogeek.com/205086/beginner-how-to-make-windows-show-file-extensions/)
-:::
-
-:::tip
-You can verify if the board flashed correctly by checking if the firmware.bin file has been changed to firmware.CUR on the SD card. If you have trouble flashing the motherboard, start unplugging your wires beginning with the endstops, sometimes faulty wiring can cause the board to not boot properly.
-:::
-
-If you're going through initial setup please continue in the [installation guide](installation.md#setup)
-
-## Manual firmware upgrade
-
-Sometimes klipper makes changes to the microcontroller code and thus your MCU need to be reflashed with new firmware. If you see an error like this:
+When you update klipper you might see an error that looks like this:
 
 ![Firmware version mismatch between host and guest](/img/firmware_version_mismatch.png)
 
-And the host version number is larger than the mcu version number, you need to flash your control board. If the host version is lower than the MCU number, you need to update klipper on your pi. RatOS compiles the firmware binary for you each time klipper is updated (while the SKR 2 is connected), you can find the most recent firmware in the Mainsail Machine page under the `firmware_binaries` folder)
-
-:::info
-RatOS automatically compiles new firmware for your board when klipper is updated and places it in the firmware_binaries folder, you can download the binary from here and flash via SD card manually. Follow the process described above.
-:::
+This is because klipper made changes to a part of the MCU firmware that we use, and the SKR 2 cannot be flashed automatically yet. Klipper is telling us that the version of klipper running on the Pi is newer than the version running on the MCU. To fix this, we have to flash the board with a new version of the firmware, Follow the steps in the RatOS Configurator at [http://RatOS.local/configure?step=1](http://RatOS.local/configure?step=1).
