Docs: add mellow toolboards

--- a/site/docs/toolboards/btt/ebb-36-11.mdx
+++ b/site/docs/toolboards/btt/ebb-36-11.mdx
@@ -4,7 +4,7 @@ sidebar_label: EBB-36 v1.1
 
 import WiringSVG from "./_media/ebb36-wiring.svg";
 
-# BIGTREETECH BTT EBB36 v1.1
+# BIGTREETECH EBB36 v1.1
 
 ## Wiring
 
