--- a/site/docs/toolboards/btt/ebb-42-12.mdx
+++ b/site/docs/toolboards/btt/ebb-42-12.mdx
@@ -4,7 +4,7 @@ sidebar_label: EBB-42 v1.2
 
 import WiringSVG from "./_media/ebb42-wiring.svg";
 
-# BIGTREETECH BTT EBB42 v1.2
+# BIGTREETECH EBB42 v1.2
 
 ## Wiring
 
