--- a/site/docs/toolboards/mellow/fly-sht-36.mdx
+++ b/site/docs/toolboards/mellow/fly-sht-36.mdx
@@ -1,16 +1,16 @@
 ---
-sidebar_label: EBB-42 v1.1
+sidebar_label: FLY SHT-36
 ---
 
-import WiringSVG from "./_media/ebb42-wiring.svg";
+import WiringSVG from "./_media/fly-sht-36-wiring.svg";
 
-# BIGTREETECH EBB42 v1.1
+# Mellow FLY SHT-36
 
 ## Wiring
 
 <WiringSVG width="100%" height={null} />
 
-[Open Full Size Image](_media/ebb42-wiring.svg)
+[Open Full Size Image](_media/fly-sht-36-wiring.svg)
 
 :::caution Use a good quality cable
 Make sure your board is connected to the Pi via a good quality USB 3.1 (or better) braided cable for best performance and durability.
