--- a/site/docs/toolboards/btt/ebb-42-10.mdx
+++ b/site/docs/toolboards/btt/ebb-42-10.mdx
@@ -4,7 +4,7 @@ sidebar_label: EBB-42 v1.0
 
 import WiringSVG from "./_media/ebb42-wiring.svg";
 
-# BIGTREETECH BTT EBB42 v1.0
+# BIGTREETECH EBB42 v1.0
 
 ## Wiring
 
