Docs: add SKR 3 docs

--- a/site/docs/boards/btt/skr-2-429.md
+++ b/site/docs/boards/btt/skr-2-429.md
@@ -14,7 +14,8 @@ This board currently cannot be flashed automatically through USB, that means all
 [Open Full Size Image](_media/skr-2-429-wiring-full.svg)
 
 :::danger if you use the Ratrig endstop switches and cables, do **not** blindly plug them in to your SKR 2 as doing this will short the board's 5V power rail.
-You will probably have to swap the outer two wires (red and white) on the board end of the cable but double check to make sure your cables match the wiring diagram.
+You will probably have to swap the outer two wires (red and white) on the board end of the cable but double check to make sure your cables match the wiring diagram in both ends.
+Orders shipped after October 2022 should have the correct cables (the connectors on the new cables are white).
 :::
 
 :::info Jumpers
