Docs: klipper error words

--- a/site/docs/boards/btt/skr-3.mdx
+++ b/site/docs/boards/btt/skr-3.mdx
@@ -40,7 +40,7 @@ Follow the steps in the RatOS Configurator at [http://RatOS.local/configure?step
 
 ## I updated klipper and now i get an error!
 
-When you update klipper you might see an error that looks like this:
+When you update klipper and for some reason RatOS fails to flash your board automatically, you might see an error that looks like this:
 
 ![Firmware version mismatch between host and guest](/img/firmware_version_mismatch.png)
 
