Docs: fix m8p wiring diagram rendering

--- a/site/docs/boards/btt/manta-m8p.mdx
+++ b/site/docs/boards/btt/manta-m8p.mdx
@@ -2,11 +2,14 @@
 sidebar_label: Manta M8P
 ---
 
+import WiringSVG from "./_media/manta-m8p-wiring.svg";
+
 # BIGTREETECH Manta M8P
 
 ## Wiring
 
-![BTT M8P Pro STM32F446 Wiring Diagram](_media/manta-m8p-wiring.svg)
+<WiringSVG width="100%" height={null} />
+
 [Open Full Size Image](_media/manta-m8p-wiring.svg)
 
 :::danger if you use the Ratrig endstop switches and cables, do **not** blindly plug them in to your M8P as doing this will short the board's 5V power rail.
