Docs: add pi power diagram to skrat

--- a/site/docs/boards/btt/skrat-10.mdx
+++ b/site/docs/boards/btt/skrat-10.mdx
@@ -4,6 +4,7 @@ sidebar_label: SKRat v1.0
 
 import WiringSVG from "./_media/skrat-10-wiring.svg";
 import FanSVG from "./_media/skrat-10-fan-wiring.svg";
+import PiSVG from "./_media/skrat-10-pi-wiring.svg";
 
 # BIGTREETECH SKRat v1.0
 
@@ -29,6 +30,12 @@ A green square is where you would place a jumper, remove all jumpers on the boar
 [Open Full Size Image](_media/skrat-10-fan-wiring.svg)
 
 The SKRat supports both 2-pin and 4-pin fans. Since there's only 2 4-pin fan headers, you can only run either the Hotend or the Controller as a four pin fan besides the Part Cooling Fan. You can mix and match as you like. **Always** remember to set the voltage selector correctly for the fan you're using.
+
+### Powering the Raspberry Pi
+
+<PiSVG width="100%" height={null} />
+
+[Open Full Size Image](_media/skrat-10-pi-wiring.svg)
 
 ## Firmware installation
 
