Docs: Smaller SKRat pi wiring image

--- a/site/docs/boards/btt/skrat-10.mdx
+++ b/site/docs/boards/btt/skrat-10.mdx
@@ -4,7 +4,6 @@ sidebar_label: SKRat v1.0
 
 import WiringSVG from "./_media/skrat-10-wiring.svg";
 import FanSVG from "./_media/skrat-10-fan-wiring.svg";
-import PiSVG from "./_media/skrat-10-pi-wiring.svg";
 
 # BIGTREETECH SKRat v1.0
 
@@ -33,9 +32,9 @@ The SKRat supports both 2-pin and 4-pin fans. Since there's only 2 4-pin fan hea
 
 ### Powering the Raspberry Pi
 
-<PiSVG width="100%" height={null} />
+![SKRat Pi Power Diagram](_media/skrat-10-pi-wiring.png)
 
-[Open Full Size Image](_media/skrat-10-pi-wiring.svg)
+[Open Full Size Image](_media/skrat-10-pi-wiring.png)
 
 ## Firmware installation
 
