Docs: Add warnings to SKRat doc

--- a/site/docs/boards/btt/skrat-10.mdx
+++ b/site/docs/boards/btt/skrat-10.mdx
@@ -28,6 +28,14 @@ A green square is where you would place a jumper, remove all jumpers on the boar
 
 [Open Full Size Image](_media/skrat-10-fan-wiring.svg)
 
+:::caution Verify wire colors
+The fan wire colors in this diagram might not match the colors of the wires on your particular fan. Always refer to the spec sheet of your fan to make sure you're connecting your fan correctly.
+:::
+
+:::danger Fan Voltage
+**Always** remember to set the voltage selector correctly for the fan you're using.
+:::
+
 The SKRat supports both 2-pin and 4-pin fans. Since there's only 2 4-pin fan headers, you can only run either the Hotend or the Controller as a four pin fan besides the Part Cooling Fan. You can mix and match as you like. **Always** remember to set the voltage selector correctly for the fan you're using.
 
 ### Powering the Raspberry Pi
