Docs: add info about dupont connectors to SKRat

--- a/site/docs/boards/btt/skrat-10.mdx
+++ b/site/docs/boards/btt/skrat-10.mdx
@@ -44,6 +44,10 @@ The SKRat supports both 2-pin and 4-pin fans. Since there's only 2 4-pin fan hea
 
 [Open Full Size Image](_media/skrat-10-pi-wiring.png)
 
+:::tip Use a 2x5 dupont connector
+You can use a 2x2 and 2x5 dupont connector to make a solid and reliable connection between the Pi and the SKRat.
+:::
+
 ## Firmware installation
 
 Follow the steps in the RatOS Configurator at [http://RatOS.local/configure?step=1](http://RatOS.local/configure?step=1).
