Docs: Update installation and configuration

--- a/site/docs/introduction.mdx
+++ b/site/docs/introduction.mdx
@@ -21,6 +21,15 @@ Like MainsailOS and FluiddPi, RatOS is just an image for your Raspberry Pi consi
 
 To run RatOS on your printer you need a supported control board and a Raspberry Pi.
 
+Currently supported raspberry pi's:
+
+-   Raspberry Pi 3 (A+/B/B+)
+-   Raspberry Pi 4B
+-   Raspberry Pi 400
+-   Raspberry Pi Zero 2
+-   Raspberry Pi Compute Module 4 Lite for use with SD Cards
+-   Raspberry pi Compute Module 4 with at least 16gb eMMC (more complicated to set up)
+
 <Link to="/docs/installation" className="button button--primary">
     Ready? Get started!
 </Link>
