Docs: better intro in stowable probe guide

--- a/site/docs/guides/stowable-probes.mdx
+++ b/site/docs/guides/stowable-probes.mdx
@@ -2,7 +2,7 @@ import Illustration from "./_media/stowable_probes.excalidraw.svg";
 
 # Stowable Probes
 
-RatOS 2.0 and higher has support for Stowable Probes. Preset includes exists for euclid, klicky and unclicky at the time of writing. To use one of the presets, you need to uncomment it in your printer.cfg. If you use a stowable probe that doesn't have a preset, you can use any of the presets as a template, just copy the contents into the `USER OVERRIDES` section in your printer.cfg and modify to fit your probe.
+RatOS 2.0 and higher has support for Stowable Probes. Preset includes exists for euclid, klicky and unclicky at the time of writing. To use one of the presets, you need to uncomment it in your printer.cfg. If you use a stowable probe that doesn't have a preset, you can use any one of the presets as a template, just copy the contents into the `USER OVERRIDES` section in your printer.cfg and modify to fit your probe.
 
 ## Dock position
 
