--- a/site/docs/boards/btt/manta-m8p.mdx
+++ b/site/docs/boards/btt/manta-m8p.mdx
@@ -3,6 +3,7 @@ sidebar_label: Manta M8P
 ---
 
 import WiringSVG from "./_media/manta-m8p-wiring.svg";
+import FanSVG from "./_media/manta-m8p-fan-wiring.svg";
 
 # BIGTREETECH Manta M8P
 
@@ -21,6 +22,22 @@ Orders shipped after October 2022 should have the correct cables (the connectors
 A green square is where you would place a jumper, remove all jumpers on the board that are not marked by this symbol.
 :::
 
+### FAN Wiring
+
+<FanSVG width="100%" height={null} />
+
+[Open Full Size Image](_media/manta-m8p-fan-wiring.svg)
+
+:::caution Verify wire colors
+The fan wire colors in this diagram might not match the colors of the wires on your particular fan. Always refer to the spec sheet of your fan to make sure you're connecting your fan correctly.
+:::
+
+:::danger Fan Voltage
+**Always** remember to set the voltage selector correctly for the fan you're using.
+:::
+
+The Manta M8P supports both 2-pin and 4-pin fans. Since there's only 2 4-pin fan headers, you can only run either the Hotend or the Controller as a four pin fan besides the Part Cooling Fan. You can mix and match as you like. **Always** remember to set the voltage selector correctly for the fan you're using.
+
 ### Jumpers
 
 The jumpers above the stepper drivers switches stepper driver input power between V_MOT and VIN (ie, board power terminals and motor power terminals).
@@ -32,7 +49,7 @@ If you wanted to use 48V for example, you would connect your 48V psu to the moto
 :::info
 The Manta M8P is a Compute Module 4 (CM4) host board. RatOS supports CM4's as long as there's no eMMC (using micro SD card, recommended for ease of use) or at least 16gb eMMC storage.
 The BTT CB1 is currently not supported.
-::: 
+:::
 
 If you're using a CM4 with eMMC storage, you cannot use an SD card. You'll have to connect the Manta to a PC and flash the eMMC storage, please follow the steps in the [BTT Manta M8P User Manual](https://github.com/bigtreetech/Manta-M8P/raw/master/BIGTREETECH%20MANTA%20M8P%20V1.0%20User%20Manual.pdf), for how to mount the eMMC storage to your PC. Then use Balena Etcher to flash RatOS to the CM4, just like it was an SD card.
 
