--- a/site/docs/boards/btt/manta-m8p.mdx
+++ b/site/docs/boards/btt/manta-m8p.mdx
@@ -36,7 +36,7 @@ The fan wire colors in this diagram might not match the colors of the wires on y
 **Always** remember to set the voltage selector correctly for the fan you're using.
 :::
 
-The Manta M8P supports both 2-pin and 4-pin fans. Since there's only 2 4-pin fan headers, you can only run either the Hotend or the Controller as a four pin fan besides the Part Cooling Fan. You can mix and match as you like. **Always** remember to set the voltage selector correctly for the fan you're using.
+The Manta M8P supports both 2-pin and 4-pin fans. You can mix and match as you like. **Always** remember to set the voltage selector correctly for the fan you're using.
 
 ### Jumpers
 
