--- a/site/docs/introduction.mdx
+++ b/site/docs/introduction.mdx
@@ -19,7 +19,7 @@ Like MainsailOS and FluiddPi, RatOS is just an image for your Raspberry Pi consi
 
 ## What do I need?
 
-To run RatOS on your printer you need a supported control board and a Raspberry Pi.
+To run RatOS on your printer you need a supported control board and a Raspberry Pi or BTT CB1.
 
 Currently supported raspberry pi's:
 
@@ -29,6 +29,7 @@ Currently supported raspberry pi's:
 -   Raspberry Pi Zero 2
 -   Raspberry Pi Compute Module 4 Lite for use with SD Cards
 -   Raspberry pi Compute Module 4 with at least 16gb eMMC (more complicated to set up)
+-   Big Tree Tech CB1
 
 <Link to="/docs/installation" className="button button--primary">
     Ready? Get started!
