--- a/site/docs/introduction.mdx
+++ b/site/docs/introduction.mdx
@@ -19,7 +19,7 @@ Like MainsailOS and FluiddPi, RatOS is just an image for your Raspberry Pi consi
 
 ## What do I need?
 
-To run RatOS on your printer you need a supported control board and a Raspberry Pi or BTT CB1.
+To run RatOS on your printer you need a supported control board and a Raspberry Pi or BTT CB1 (experimental).
 
 Currently supported raspberry pi's:
 
