--- a/site/docs/boards/btt/manta-m4p.mdx
+++ b/site/docs/boards/btt/manta-m4p.mdx
@@ -30,7 +30,7 @@ If you wanted to use 48V for example, you would connect your 48V psu to the moto
 ## Installing RatOS on eMMC
 
 :::info
-The Manta M4P is a Compute Module 4 (CM4) host board. RatOS supports BTT CB1 and CM4's as long as there's no eMMC (using micro SD card, recommended for ease of use) or at least 16gb eMMC storage.
+The Manta M4P is a Compute Module 4 (CM4) host board. RatOS supports BTT CB1 (experimental) and CM4's as long as there's no eMMC (using micro SD card, recommended for ease of use) or at least 16gb eMMC storage.
 :::
 
 If you're using a CM4 with eMMC storage, you cannot use an SD card. You'll have to connect the Manta to a PC and flash the eMMC storage, please follow the steps in the [BTT Manta M4P User Manual](https://github.com/bigtreetech/Manta-M4P/raw/master/BIGTREETECH_MANTA_M4P_User_Manual.pdf), for how to mount the eMMC storage to your PC. Then use Balena Etcher to flash RatOS to the CM4, just like it was an SD card.
