Docs: add new printers and more introduction

--- a/site/docs/introduction.mdx
+++ b/site/docs/introduction.mdx
@@ -17,6 +17,8 @@ Then there's the API, Moonraker which exposes printer status and methods for oth
 
 Like MainsailOS and FluiddPi, RatOS is just an image for your Raspberry Pi consisting of a combination of these parts and some initial setup. RatOS goes a step further than the others and provides a complete managed modular configuration supporting several printers, extruders, hotends, boards, probes, sensors, macros, etc and some extra neat features such as automated firmware updates, easy input shaper graph generation and so on. RatOS's main design principle is that the user shouldn't be required to interact with the commandline to use Klipper on their 3D Printer.
 
+That said, anything you can do in klipper, you can do in RatOS, if you're well versed in klipper configurations you can even use parts of the RatOS configuration to set up an unsupported printer, giving you easy access to automatic flashing of toolboards and controlboards, stowable probes and a ton of macro's to make your life easier.
+
 ## What do I need?
 
 To run RatOS on your printer you need a supported control board and a Raspberry Pi or BTT CB1 (experimental).
@@ -29,7 +31,7 @@ Currently supported raspberry pi's:
 -   Raspberry Pi Zero 2
 -   Raspberry Pi Compute Module 4 Lite for use with SD Cards
 -   Raspberry pi Compute Module 4 with at least 16gb eMMC (more complicated to set up)
--   Big Tree Tech CB1
+-   Big Tree Tech CB1 (experimental)
 
 <Link to="/docs/installation" className="button button--primary">
     Ready? Get started!
@@ -40,8 +42,9 @@ Currently supported raspberry pi's:
 -   [Rat Rig V-Core 3](printers/v-core-3.md)
 -   [Rat Rig V-Core Pro 1.3](printers/v-core-pro.md)
 -   [Rat Rig V-Minion](printers/v-minion.md)
--   Voron V0.1
--   Voron V2.4
+-   [Voron V0.1 (experimental)](printers/voron-v01.md)
+-   [Voron V2.4 (experimental)](printers/voron-v24.md)
+-   Prusa Mini (experimental)
 
 ## Contribute
 
