Docs: add prusa mk3s and mdns troubleshooting

--- a/site/docs/introduction.mdx
+++ b/site/docs/introduction.mdx
@@ -45,6 +45,7 @@ Currently supported raspberry pi's:
 -   [Voron V0.1 (experimental)](printers/voron-v01.md)
 -   [Voron V2.4 (experimental)](printers/voron-v24.md)
 -   Prusa Mini (experimental)
+-   Prusa MK3S (experimental)
 
 ## Contribute
 
