Blog: fix v2.0.0 release post url

--- a/site/blog/2023-03-04-ratos-v2-0-0-released.mdx
+++ b/site/blog/2023-03-04-ratos-v2-0-0-released.mdx
@@ -1,5 +1,5 @@
 ---
-slug: ratos-v2-2-released
+slug: ratos-v2-0-0-released
 title: RatOS V2.0.0 Released!
 authors: [miklschmidt]
 tags: [RatOS, Releases]
